fixing cards images on small devises

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -132,14 +132,14 @@ body{
 
 			@media screen and (max-width: 375px) {
 				.card .image.custom .artist_profile_pic{
-					width: 289px !important;
+					width: 288px !important;
 					height: 210px !important;
 				}
 			}
 
 			@media screen and (max-width: 320px) {
 				.card .image.custom .artist_profile_pic{
-					width: 255px !important;
+					width: 253px !important;
 					height: 210px !important;
 				}
 			}
